<resources>
    <string name="app_name">Airplanes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="airbus_tagline">Pioneering sustainable aerospace for a safe and united world</string>
    <string name="airbus_company_info">Airbus - мировой пионер в аэрокосмической отрасли, работающий в сфере коммерческих самолетов, вертолетов, оборонной и космической промышленности. Одна из крупнейших авиастроительных компаний в мире, образованная в конце 1960-х годов путём слияния нескольких европейских авиапроизводителей.</string>
    <string name="airbus_a380_characteristics">Размеры
Длина: 72.7
Размах крыла: 79.8
Высота: 24.1
Двухпалубный, Широкофюзеляжный
Вес
Макс. Взлётный вес: 560 тонн
Вес пустого: 277 тонн
Ёмкость бака: 310 000л.
Лётные данные
Дальность полета с макс. Загрузкой: 15000км
Потолок (макс. высота полета): 13100м.
Длина разбега(мин. длина полосы для взлёта): 2050м
Длина пробега(мин. длина полосы для посадки): 2900м
Пассажирский салон
Кол-во кресел (эконом): 700
Кол-во кресел (эконом+бизнес+первый): 525
</string>
    <string name="airbus_a380_first_flight">Первый полет Airbus A380 совершил 27 апреля 2005 года. Коммерческая эксплуатация самолета началась 25 октября 2007 года.</string>
    <string name="airbus_a380_design_peculiarity">В конструкции Airbus А380 широко используются композитные материалы — металлы и пластмассы, армированные стекловолокном, углеродным и кварцевым волокном. Также, используются новые свариваемые алюминиевые сплавы, что, в сочетании со сваркой лазерным лучом, позволило избавиться от заклёпок.</string>
    <string name="airbus_a380_technical_innovations">Airbus А380 оборудован электродистанционной системой управления Fly-By-Wire. Кабина экипажа, оснащена боковыми рукоятками управления (sidestick), по типу джойстиков, вместо привычных штурвалов. Вместо стрелочных индикаторов в кабине установлены дисплеи на которых отображаются параметры работы систем самолета, а также навигационная информация и другие необходимые данные. Самолетом управляют 2 пилота, а роль бортинженера выполняют компьютеры, которые рассчитывают параметры полёта, автоматизируют процесс управления самолетом и выводят информацию на дисплеи.</string>
    <string name="airbus_a380_comfort">Уровень шума в салоне A380 на 50% меньше, чем у Boeing 747, также внутри самолёта поддерживается более высокое давление воздуха (равное давлению на высоте 1500 метров против 2500 у 747). Оба этих фактора предположительно будут способствовать уменьшению утомляемости пассажиров при путешествии. Верхняя и нижняя палубы соединены двумя лестницами, в носовой и хвостовой частях самолёта, достаточно широкими, чтобы на них поместились два пассажира плечом к плечу. В конфигурации с 555 пассажирами A380 имеет на 33% больше пассажирских мест, чем Boeing 747–400 в стандартной конфигурации с тремя классами, но салон имеет на 50% больше пространства и объёма, в результате чего на одного пассажира приходится больше места. Максимальная сертифицированная вместимость самолёта — 853 пассажира при конфигурации с единым эконом-классом.</string>
    <string name="airbus_a350_900_characteristics">Размеры
Длина: 67
Размах крыла: 64
Высота: 16.9
Однопалубный, Сверхширокофюзеляжный
Вес
Макс. Взлётный вес: 265 тонн
Вес пустого: 118 тонн
Ёмкость бака: 150 000л.
Лётные данные
Дальность полета с макс. Загрузкой: 15000км
Потолок (макс. высота полета): 13100м.
Длина разбега(мин. длина полосы для взлёта): 2600м
Длина пробега(мин. длина полосы для посадки): 2000м
Пассажирский салон
Кол-во кресел (эконом): 420
Кол-во кресел (эконом+бизнес+первый): 314
</string>
    <string name="airbus_a350_900_first_flight">Первый полет Airbus A350–900 совершил 14 июня 2013 года. Коммерческая эксплуатация самолета началась в январе 2015 года.</string>
    <string name="airbus_a350_900_design_peculiarity">В конструкции A350 широко использованы новейшие материалы: 52 % от веса самолёта составляют композиционные материалы, 20 % — алюминий, 14 % — титан, 7 % — сталь, 7 % — остальные (для сравнения, его конкурент Boeing 787 состоит на 50 % из композитов, на 20 % из алюминия, на 15 % из титана, на 10 % из стали и на 5 % из других материалов).</string>
    <string name="airbus_a350_900_technical_innovations">Airbus A350–900 основан на технологиях, разработанных для А380 и оборудован аналогичной кабиной пилотов, а также системой электродистанционного управления Fly-By-Wire. Кабина экипажа, оснащена боковыми рукоятками управления (sidestick), по типу джойстиков, вместо привычных штурвалов. Вместо стрелочных индикаторов в кабине установлены дисплеи на которых отображаются параметры работы систем самолета, а также навигационная информация и другие необходимые данные. Самолетом управляют 2 пилота, а роль бортинженера выполняют компьютеры, которые рассчитывают параметры полёта, автоматизируют процесс управления самолетом и выводят информацию на дисплеи.</string>
    <string name="airbus_a350_900_comfort">Конструкция кабины экипажа позволяет легко внедрять новинки навигационных технологий, устанавливать новое программное обеспечение, собирать данные с различных источников и сенсоров для успешного управления самолетом.
Благодаря новейшим технологиям, уровень шума в салоне A350 крайне низкий. За счёт использования композиционных материалов, фюзеляж лайнера позволяет обеспечить в салоне более высокое давление и влажность, что немаловажно для комфорта пассажиров на дальнемагистральных рейсах.
</string>
    <string name="boeing_tagline">One destination. A world of solutions.</string>
    <string name="boeing_company_info">Boeing является ведущей мировой авиакосмической корпорацией c более чем столетней историей и крупнейшим производителем пассажирских самолетов. Заказчики компании находятся в более чем 150 странах мира. По объемам продаж Boeing является одним из крупнейших экспортеров в США. Компания Boeing насчитывает более 140 000 сотрудников в 65 странах мира.</string>
    <string name="boeing_777_200LR_characteristics">Размеры
Длина: 63.7
Размах крыла: 64.8
Высота: 18.6
Однопалубный, Широкофюзеляжный
Вес
Макс. Взлётный вес: 347 тонн
Вес пустого: 156 тонн
Ёмкость бака: 202 500л.
Лётные данные
Дальность полета с макс. Загрузкой: 17450км
Потолок (макс. высота полета): 13100м.
Длина разбега(мин. длина полосы для взлёта): 2900м
Длина пробега(мин. длина полосы для посадки): 1700и
Пассажирский салон
Кол-во кресел (эконом): 440
Кол-во кресел (эконом+бизнес+первый): 301
</string>
    <string name="boeing_777_200LR_first_flight">Первый полет Boeing 777–200 совершил 12 июня 1994 года. Коммерческая эксплуатация самолета началась 15 мая 1995 года в авиакомпании United Airlines.</string>
    <string name="boeing_777_200LR_design_peculiarity">Крыло Boeing 777 имеет сверхкритический профиль, оптимизированный для крейсерской скорости 0,83 Маха (после испытаний показатель был пересмотрен в сторону повышения до 0,84 Маха). Конструкция крыла имеет большую толщину и размах, чем у предыдущих самолетов, что позволило увеличить дальность и полезную нагрузку, повысить лётные характеристики и увеличить крейсерскую высоту полета. При запуске проекта 777, было предложено разработать складное крыло (Folding wingtips), чтобы авиакомпании могли использовать ангары для небольших самолетов, но ни одна авиакомпания не согласилась на этот вариант. 9% элементов фюзеляжа изготовлены из композиционных материалов на основе углерода.</string>
    <string name="boeing_777_200LR_technical_innovations">В проекте 777, Boeing представил ряд передовых технологий, включающих в себя: полностью цифровую электродистанционную систему управления (fly-by-wire), полностью программируемую авионику, стеклянную кабину (Glass Cockpit) с жидкокристаллическими дисплеями Honeywell, оптоволоконную сеть авионики (которая на коммерческом самолете была проведена впервые).</string>
    <string name="boeing_777_200LR_comfort">В самолётах Boeing 777–200ER, −200LR и −300ER в передней части самолёта над салоном первого класса установлен отсек для отдыха пилотов. Он включает в себя два комфортабельных кресла, 2 или 3 спальных места разделённых перегородками, шкаф, телевизор и умывальник.</string>
    <string name="boeing_747_400_characteristics">Размеры
Длина: 70.7
Размах крыла: 64.4
Высота: 19.4
Двухпалубный, Широкофюзеляжный
Вес
Макс. Взлётный вес: 412 тонн
Вес пустого: 184 тонн
Ёмкость бака: 241 140л.
Лётные данные
Дальность полета с макс. Загрузкой: 14200км
Потолок (макс. высота полета): 13750м.
Длина разбега(мин. длина полосы для взлёта): 3320м
Длина пробега(мин. длина полосы для посадки): 2180м
Пассажирский салон
Кол-во кресел (эконом): 660
Кол-во кресел (эконом+бизнес+первый): 416
</string>
    <string name="boeing_747_400_first_flight">Первый полет Boeing 747–400 совершил 29 апреля 1988 года. Коммерческая эксплуатация самолета началась 9 февраля 1989 года в авиакомпании Northwest Airlines.</string>
    <string name="boeing_747_400_design_peculiarity">Как и на всех модификациях Boeing 747, для возможной замены двигателей в удалённых аэропортах на Boeing 747–400 предусмотрена возможность доставки двигателя на внешней подвеске. Дополнительная точка крепления расположена под крылом между двигателем № 2 (ближний к фюзеляжу слева) и фюзеляжем. Таким образом, Boeing 747 может лететь с пятью закреплёнными на нём двигателями (запасной двигатель при этом не работает).</string>
    <string name="concorde_characteristics">Размеры
Длина: 61.7
Размах крыла: 25.6
Высота: 12.2
Однопалубный, Сверхзвуковой
Вес
Макс. Взлётный вес: 187 тонн
Вес пустого: 79 тонн
Ёмкость бака: 119786л.
Лётные данные
Дальность полета с макс. Загрузкой: 4000км
Потолок (макс. высота полета): 20000м.
Длина разбега(мин. длина полосы для взлёта): 2930м
Длина пробега(мин. длина полосы для посадки): 2570м
Пассажирский салон
Кол-во кресел (эконом): 150
Кол-во кресел (эконом+бизнес+первый): нет данных
</string>
    <string name="concorde_first_flight">Первый полёт состоялся 2 марта 1969 года. Массовая эксплуатация началась 21 января 1976 года</string>
    <string name="concorde_design_peculiarity">Для «Конкорда» выбрана аэродинамическая схема «бесхвостка» с низкорасположенным треугольным крылом оживальной формы. Самолёт оптимизирован для выполнения длительного крейсерского полёта на сверхзвуковой скорости. При длительном сверхзвуковом полёте в результате кинетического нагрева температура обшивки достигает значений 127°С у носовой части фюзеляжа, и порядка 100°С для носка крыла. Поэтому в качестве основного конструкционного материала планера самолёта был выбран жаропрочный алюминиевый сплав Hiduminium RR58, первоначально разработанный компанией High Duty Alloys для узлов компрессора ГТД. Кроме этого, в конструкции самолёта использованы стали, титановые и никелевые сплавы.</string>
    <string name="concorde_technical_innovations">Силовая установка состоит из четырёх ТРДФ Rolls-Royce/SNECMA Olympus 593, установленных попарно в подкрыльевых гондолах, расположенных примерно на полуразмахе консолей крыла. Двигатели расположены таким образом, что срез сопла двигателя совпадает с задней кромкой крыла.
Двигатель Olympus 593 — сильно модифицированная версия ТРД Bristol Siddeley Olympus 301, применявшегося на бомбардировщиках Avro Vulcan. Двигатель одноконтурный, двухвальный, каждая из двух секций компрессора имеет по 7 ступеней, турбины одноступенчатые. Степень сжатия компрессора 11,7:1. Из-за высокой степени сжатия на крейсерской скорости последние 4 ступени компрессора работали в очень жёстком температурном режиме, что привело к необходимости изготовления их из никелевого сплава, применявшегося ранее только для лопаток турбин. Двигатель использовал обычное авиационное топливо A1.
</string>
    <string name="concorde_comfort">Салон Конкорда был достаточно комфортным, а иногда даже с намёками на роскошь, некоторые модели оборудовались чёрными кожаными сидениями </string>
</resources>