<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AirplaneInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewMainAirplanePhoto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/main_photo_concorde" />

            <TextView
                android:id="@+id/textViewCharacteristics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp"
                android:text="@string/concorde_characteristics"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewFirstFlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp"
                android:text="@string/concorde_first_flight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewPlaneInFlight"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewDesignPeculiarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp"
                android:text="@string/concorde_design_peculiarity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewConstruction"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewTechnicalInnovations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp"
                android:text="@string/concorde_technical_innovations"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewCrewCabin"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewComfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp"
                android:text="@string/concorde_comfort"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewComfort"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>